SERVER-12252 Fix mongod log output for write commands. Fix too big msg.