src/mongo/db/commands/write_commands/write_commands.h
@@ -57,6 +57,9 @@ namespace mongo {
          */
         WriteCmd( const StringData& name, BatchedCommandRequest::BatchType writeType );
 
+        // Full log of write command can be quite large.
+        static void redactTooLongLog( mutablebson::Document* cmdObj, const StringData& fieldName );
+
     private:
         virtual bool logTheOp();
 
@@ -86,6 +89,7 @@ namespace mongo {
         MONGO_DISALLOW_COPYING(CmdInsert);
     public:
         CmdInsert();
+        void redactForLogging(mutablebson::Document* cmdObj);
 
     private:
         virtual void help(stringstream& help) const;
@@ -95,6 +99,7 @@ namespace mongo {
         MONGO_DISALLOW_COPYING(CmdUpdate);
     public:
         CmdUpdate();
+        void redactForLogging(mutablebson::Document* cmdObj);
 
     private:
         virtual void help(stringstream& help) const;
@@ -104,6 +109,7 @@ namespace mongo {
         MONGO_DISALLOW_COPYING(CmdDelete);
     public:
         CmdDelete();
+        void redactForLogging(mutablebson::Document* cmdObj);
 
     private:
         virtual void help(stringstream& help) const;
